--- a/index.html
+++ b/index.html
@@ -454,6 +454,6 @@ $(document).ready(function ()  {
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
-
+<iframe src="https://www.google.com/maps/d/embed?mid=1B8fDAx8gQiWn6hD3BzQkBcjWoqBajU1E" width="640" height="480"></iframe>
 </body>
 </html>
